--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -71,7 +71,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/72487dcdbe.js" crossorigin="anonymous"></script>
-
+    <script src="../js_pages/functions_commun.js"></script>
     <script src="../js_pages/photographer_page.js"></script>
 </body>
 
