--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -63,6 +63,48 @@
         </section>
 
 
+        <div class="bground">
+            <div class="content">
+                <span class="close"></span>
+                <div class="modal-body">
+
+                    <h2>Contactez-moi <br><span class="nom_photographer"></span></h2>
+
+                    <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+                        <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du prenom" data-error-visible="false">
+                            <label for="first">Prénom</label><br>
+                            <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
+
+                        </div>
+                        <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du nom">
+                            <label for="last">Nom</label><br>
+                            <input class="text-control" type="text" id="last" name="last" minlength="2" required /><br>
+                        </div>
+                        <div class="formData" data-error="Veuillez entrer email correct">
+                            <label for="email">E-mail</label><br>
+                            <input class="text-control" type="email" id="email" name="email" required /><br>
+                        </div>
+                        <!-- <div class="formData" data-error="Veuillez entrer email correct">
+                            <label for="email">E-mail</label><br>
+                            <input class="text-control" type="email" id="email" name="email"  /><br>
+                        </div> -->
+
+
+
+                        <input class="btn-submit button" type="submit" value="Envoyer" />
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
     </main>
 
 
