modal page done without  verification

--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -84,10 +84,10 @@
                             <label for="email">E-mail</label><br>
                             <input class="text-control" type="email" id="email" name="email" required /><br>
                         </div>
-                        <!-- <div class="formData" data-error="Veuillez entrer email correct">
-                            <label for="email">E-mail</label><br>
-                            <input class="text-control" type="email" id="email" name="email"  /><br>
-                        </div> -->
+                        <div class="formData">
+                            <label for="email">Votre message</label><br>
+                            <input class="text-control" type="text" id="text" name="text" /><br>
+                        </div>
 
 
 
