--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -48,14 +48,14 @@
                 <div class="wrapper_sort">
                     <ul class="sort_media btn">
                         <li class="sort_media sort_media_arrow underline">
-                            <span class="text_sort">Popularité</span>
+                            <span class="like_sort">Popularité</span>
                             <i class="fas fa-angle-down change_status_display"></i>
                             <!-- <i class="fas fa-angle-up display_none change_status_display"></i> -->
                         </li>
 
-                        <li class="sort_media sort_media_first  change_status_display underline">Date</li>
+                        <li class="sort_media date_sort sort_media_first  change_status_display underline">Date</li>
 
-                        <li class="sort_media sort_media_second  change_status_display">Titre</li>
+                        <li class="sort_media text_sort sort_media_second  change_status_display">Titre</li>
                     </ul>
 
                 </div>
