--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="contener">
-        <header>
-            <a href="#" class="invisible_link">Passer au contenu</a>
+        <header role="banner">
+            <a href="#" class="invisible_link" aria-current=”page”>Passer au contenu</a>
             <div class="wrapper_header">
-                <svg width="200" height="50" viewBox="0 0 200 50" fill="none" class="logo" xmlns="http://www.w3.org/2000/svg">
+                <svg width="200" height="50" viewBox="0 0 200 50" fill="none" class="logo" xmlns="http://www.w3.org/2000/svg" aria-label="Fisheye Home page">
                     <path
                         d="M24.7206 0.911377V6.51034H6.31164V17.578H21.4333V22.9166H6.31164V39.1926H0V0.911377H24.7206Z"
                         fill="#911C1C" />
