description on the main  link pg photographer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="contener">
         <header role="banner">
-            <a href="#" class="invisible_link" aria-current=”page”>Passer au contenu</a>
+            <a href="#" class="invisible_link">Passer au contenu</a>
             <div class="wrapper_header">
                 <svg width="200" height="50" viewBox="0 0 200 50" fill="none" class="logo" xmlns="http://www.w3.org/2000/svg" aria-label="Fisheye Home page">
                     <path
