--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header" role="banner">
-        <a href="../index.html">
+        <a href="../index.html" aria-label="retour vers la page d'accueil">
             <svg width="200" height="50" viewBox="0 0 200 50" fill="none" class="logo" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.7206 0.911377V6.51034H6.31164V17.578H21.4333V22.9166H6.31164V39.1926H0V0.911377H24.7206Z"
                     fill="#911C1C" />
