Extention of file JSON with new fildes description for each media

--- a/html_pages/phographer_page.html
+++ b/html_pages/phographer_page.html
@@ -49,14 +49,16 @@
                 <div class="wrapper_sort">
                     <ul class="sort_media btn">
                         <li class="sort_media sort_media_arrow">
-                            <span class="like_sort">Popularité</span>
-                            <i class="fas fa-angle-down change_status_display"></i>
+                            <span class="like_sort" tabindex="0">Popularité</span>
+                            <i class="fas fa-angle-down change_status_display" tabindex="0"></i>
 
                         </li>
 
-                        <li class="sort_media date_sort sort_media_first  change_status_display top_line">Date</li>
+                        <li class="sort_media date_sort sort_media_first  change_status_display top_line" tabindex="0">
+                            Date</li>
 
-                        <li class="sort_media text_sort sort_media_second  change_status_display top_line">Titre</li>
+                        <li class="sort_media text_sort sort_media_second  change_status_display top_line" tabindex="0">
+                            Titre</li>
                     </ul>
 
                 </div>
@@ -139,7 +141,9 @@
     </div>
 
     <script src="https://kit.fontawesome.com/72487dcdbe.js" crossorigin="anonymous"></script>
-    <script src="../js_pages/functions_commun.js"></script>
+    <!-- <script src="../js_pages/Factory/FactoryMedia.js"></script>
+    <script src="../js_pages/Factory/FactoryImage.js"></script>
+    <script src="../js_pages/Factory/FactoryVideo.js"></script> -->
     <script src="../js_pages/photographer_page.js"></script>
 </body>
 
