--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>FishEye</title>
-
-
 </head>
 
 <body>
@@ -51,18 +49,14 @@
 
         </header>
 
-
-
         <main>
-            <!-- clone for phtographes -->
-            <template id="template_photographe">
-                <div class="photographers"></div>
-            </template>
-
+            <div class="photographers"></div>
         </main>
+
     </div>
-    <script src="./js_pages/Factory/FactoryPhotographer.js"></script>
-    <script src="./script.js"></script>
+
+    <script type="module" src="./js_pages/pages/app.js"></script>
+
 </body>
 
 </html>
