change media's size, change eventlisteners for photographer's page

--- a/html_pages/photographer_page.html
+++ b/html_pages/photographer_page.html
@@ -44,7 +44,7 @@
 
         <section class="content_media">
             <!--sort media content-->
-            <div class="menu_sortBy">
+            <div class="menu_sortBy" tabindex="0">
                 <h2>Trier par</h2>
                 <div class="wrapper_sort">
                     <ul class="sort_media btn">
