--- a/html_pages/photographer_page.html
+++ b/html_pages/photographer_page.html
@@ -44,16 +44,18 @@
 
         <section class="content_media">
             <!--sort media content-->
-            <div class="menu_sortBy" tabindex="0">
+            <div class="menu_sortBy">
                 <h2>Trier par</h2>
                 <div class="wrapper_sort">
-                    <ul class="sort_media btn">
+                    <ul class="sort_media btn" tabindex="0">
                         <li class="sort_media sort_media_arrow">
-                            <span class="like_sort" tabindex="0">Popularité</span>
+                            <span class="like_sort " tabindex="0">Popularité</span>
                             <i class="fas fa-angle-down change_status_display" tabindex="0"></i>
                         </li>
-                        <li class="sort_media date_sort sort_media_first  change_status_display top_line">Date</li>
-                        <li class="sort_media text_sort sort_media_second  change_status_display top_line">Titre</li>
+                        <li class="sort_media date_sort sort_media_first sortIndex change_status_display top_line">Date
+                        </li>
+                        <li class="sort_media text_sort sort_media_second sortIndex change_status_display top_line">
+                            Titre</li>
                     </ul>
 
                 </div>
@@ -67,9 +69,9 @@
 
         <div class="bground" aria-hidden="true">
             <div class="content">
-                <div>
+                <div tabindex="0" title="Contactez-moi">
                     <h2>Contactez-moi <br><span id="nom_photographer" class="nom_photographer"></span></h2>
-                    <span class="close" title="fermer le formulaire"></span>
+                    <span class="close" title="fermer le formulaire" tabindex="0"></span>
                 </div>
                 <div class="modal-body">
 
@@ -77,26 +79,30 @@
 
                     <form name="reserve" action="index.html" method="post" onsubmit="return validate();">
                         <fieldset style="border: none;">
-                            <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du prenom" data-error-visible="false">
+                            <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du prenom" data-error-visible="false" tabindex="0">
                                 <label for="firstName">Prénom</label><br>
+                                <!-- <span class="hidden">Veuillez entrer 2 caractères ou plus pour le champ du prenom</span> -->
                                 <input class="text-control" type="text" id="firstName" name="firstName" minlength="2" required aria-required=true aria-invalid="false" /><br>
 
                             </div>
-                            <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du nom">
+                            <div class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du nom" tabindex="0">
                                 <label for="lastName">Nom</label><br>
+                                <!-- <span class="hidden">Veuillez entrer 2 caractères ou plus pour le champ du nom</span> -->
                                 <input class="text-control" type="text" id="lastName" name="lastName" minlength="2" required aria-required=true aria-invalid="false" /><br>
                             </div>
-                            <div class="formData" data-error="Veuillez entrer email correct">
+                            <div class="formData" data-error="Veuillez entrer email correct" tabindex="0">
                                 <label for="email">E-mail</label><br>
+                                <!-- <span class="hidden">Veuillez entrer email</span> -->
                                 <input class="text-control" type="email" id="email" name="email" required aria-required=true aria-invalid="false" /><br>
                             </div>
-                            <div class="formData">
+                            <div class="formData" tabindex="0">
                                 <label for="message">Votre message</label><br>
+                                <!-- <span class="hidden">Veuillez entrer votre message</span> -->
                                 <textarea class="text-control message" name="message" id="message" rows="10" maxlength="300"></textarea><br>
 
                             </div>
                         </fieldset>
-                        <input class="btn-submit button" type="submit" value="Envoyer" title="envoyer les données" />
+                        <input class="btn-submit button" type="submit" value="Envoyer" title="envoyer les données" tabindex="0" />
                     </form>
 
 
