--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="contener">
-        <header role="banner">
+        <header class="index">
             <!-- <a href="#" class="invisible_link">Passer au contenu</a> -->
             <div class="wrapper_header">
                 <svg width="200" height="50" viewBox="0 0 200 50" fill="none" class="logo" xmlns="http://www.w3.org/2000/svg" aria-label="Fisheye Home page" tabindex="0">
@@ -49,7 +49,7 @@
 
         </header>
 
-        <main>
+        <main class="index">
             <div class="photographers"></div>
         </main>
 
